fix(tooltip): change word-break property to improve text wrapping (#1491)

--- a/projects/ng-aquila/src/tooltip/tooltip.component.scss
+++ b/projects/ng-aquila/src/tooltip/tooltip.component.scss
@@ -18,7 +18,7 @@ $tooltip-arrow-offset: -$tooltip-arrow-size * 0.5;
     border-radius: v(tooltip-border-radius);
     max-width: $tooltip-max-width;
     padding: 4px 8px;
-    word-break: break-all;
+    word-break: break-word;
 }
 
 .nx-tooltip__arrow {
